Fixed too small line-height in note heading due to bigger font

--- a/frontend/app/src/static/less/typography.less
+++ b/frontend/app/src/static/less/typography.less
@@ -204,6 +204,7 @@ Use `.text-details` to separate details from body text.
 @media (min-width: @min-width-three-column) {
   .text-heading-primary.large {
     font-size: @size-font-large;
+    line-height: (@grid-vertical + 6px);
   }
 }
 
